# SQLiteDao

./: .gitignore  CMakeLists.txt  README.md  aaa.cpp
cmake/: CMakeLists.txt  dependencies.cmake  function_generate_or_update_dao.cmake
cmake/fmt/: CMakeLists.txt
cmake/generate_or_update_dao/: function_generate_or_update_dao.cmake  main_program.py
cmake/generate_or_update_dao/python_implems/: abstract_file_generator.py  cmake_file_generator.py  cpp_code_generator.py  my_types.py  yaml_parser.py
cmake/magic_enum/: CMakeLists.txt
cmake/sqlite/: CMakeLists.txt
cmake/sqlite_cpp_wrapper/: CMakeLists.txt
daolib/: CMakeLists.txt  CommonQueries.cpp  CommonQueries.hpp  ConnectedDatabaseFactory.hpp  DAOLib.cpp  DAOLib.hpp  Database.cpp  Database.hpp  SQLiteError.hpp  TheHeader.hpp  Types.hpp  main.cpp
sandbox/: .gitignore  TheHeader.hpp  abstract_file_generator.py  cmake_file_generator.py  cpp_code_generator.py  cpp_code_writer.py  main_program.py  my_types.py  requirements.txt  simple-yaml.yaml  yaml_parser.py  yaml_to_cppline.py
sandbox/new_cpp_lib/: Xyz.cpp  Xyz.hpp
sqlite/: CMakeLists.txt
tests/: CMakeLists.txt
tests/test_1/: CMakeLists.txt  a.yaml  main.cpp
